Fix overflow of star animation and position of jellyfish

--- a/src/scss/_sections.scss
+++ b/src/scss/_sections.scss
@@ -89,9 +89,14 @@
     }
 
     &--right {
-      top: -3em;
-      right: 3vw;
-      width: 30vw;
+      top: -4em;
+      right: 1vw;
+      width: 40vw;
+
+      @media (min-width: 768px) {
+        right: 3vw;
+        width: 30vw;
+      }
 
       @media (min-width: 1024px) {
         top: 20vh;
@@ -176,6 +181,7 @@
     height: 70px;
     display: flex;
     justify-content: center;
+    overflow: hidden;
 
     @media (min-width: 1024px) {
       height: 100px;
